support parser gpx

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/fit.jar</systemPath>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
