--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,13 @@
 
     <groupId>org.yangyang5214</groupId>
     <artifactId>gpx2fit</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
             <groupId>com.garmin.fit</groupId>
             <artifactId>fit-sdk</artifactId>
-            <version>21.141.00</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/fit.jar</systemPath>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
@@ -26,11 +23,50 @@
         </dependency>
     </dependencies>
 
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>true</createDependencyReducedPom>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.yangyang5214.gpx2fit.App</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <mainClass>com.yangyang5214.gpx2fit.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
