--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.yangyang5214</groupId>
     <artifactId>gpx2fit</artifactId>
-    <version>1.4.0</version>
+    <version>1.5.0</version>
 
     <dependencies>
         <dependency>
@@ -33,6 +33,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.test.skip>true</maven.test.skip>
     </properties>
 
     <build>
